--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@langchain/openai": "^0.4.2",
+    "axios": "^1.8.1",
     "cra-template": "1.2.0",
     "langchain": "^0.3.15",
     "openai": "^4.83.0",
