--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -2,6 +2,7 @@
   "name": "chatbot",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bacheloroppgave-vert.vercel.app",
   "dependencies": {
     "@langchain/openai": "^0.4.2",
     "axios": "^1.8.1",
